added react-flags, buttons now are styled, added more transitions to use with i18n

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,4 +1,20 @@
 {
+  "navmenu": {
+    "home": "Home",
+    "about": "About",
+    "projects": "Projects",
+    "contact": "Contact",
+    "language": "Change language:"
+  },
+  "buttons": {
+    "viewproject": "My Projects",
+    "viewcode": "Ver codigo",
+    "viewdemo": "Ver demo",
+    "viewresume": "Ver CV",
+    "viewmore": "Ver mas",
+    "contact": "Contactame",
+    "readmore": "Read More"
+  },
   "aboutsection": {
     "subheading": "👋🏼 Let me introduce myself",
     "paragraph": "I am a full stack developer with a passion for creating beautiful and functional web applications. I have a degree on Technical Programmer and I also have passion for learning and problem solving."
@@ -9,12 +25,5 @@
     "option2": "Computer Technician",
     "option3": "React Developer",
     "option4": "Spring Boot Java Developer"
-  },
-  "navmenu": {
-    "home": "Home",
-    "about": "About",
-    "projects": "Projects",
-    "contact": "Contact",
-    "language": "Change language:"
   }
 }
